<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_STATION_LIST_RESULT" Id="{682b0aa7-21c9-420f-a72a-6b15f2719ae8}">
    <Declaration><![CDATA[TYPE ST_STATION_LIST_RESULT :
STRUCT
  wState    : WORD;   // wState == 0 --> all ok
  nIndex    : ULINT;
  stData    : ST_STATION_MOVER_DATA;  // copy of list entry
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>